--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ header h3{
 
 }
 .duties-list-item{
-	background-image: url('http://previewcf.turbosquid.com/Preview/2014/08/01__22_20_40/274a_tile_Paper-Yellow-T2.jpg7a36bc3e-018e-40e0-8891-66e977d908daLarge.jpg');
+	background-color: #f4e2ba;
+	/*url('http://previewcf.turbosquid.com/Preview/2014/08/01__22_20_40/274a_tile_Paper-Yellow-T2.jpg7a36bc3e-018e-40e0-8891-66e977d908daLarge.jpg');*/
 	border-radius: 5px;
 	padding: 10px 5px 5px 0px;
 	box-shadow: 2px 2px 4px #555;
