--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ header h3{
 
 }
 .duties-list-item{
-	background-color: #e3e5f9;
-	/*url('http://previewcf.turbosquid.com/Preview/2014/08/01__22_20_40/274a_tile_Paper-Yellow-T2.jpg7a36bc3e-018e-40e0-8891-66e977d908daLarge.jpg');*/
+	/*background-color: #e3e5f9;*/
+	background-image: url('http://www.psdgraphics.com/file/watercolor-paper-texture.jpg');
 	border-radius: 5px;
 	padding: 10px 5px 5px 0px;
 	box-shadow: 2px 2px 4px #555;
