--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 
 body{
-	background-color: #ECECED;
+	/*background-color: #ECECED;*/
 	/*background-image: url('http://previewcf.turbosquid.com/Preview/2014/08/01__22_20_40/274a_tile_Paper-Yellow-T2.jpg7a36bc3e-018e-40e0-8891-66e977d908daLarge.jpg');
 	*/
-
+	background-image: url('http://www.psdgraphics.com/file/watercolor-paper-texture.jpg');
 }
 header{
 	text-align: center;
 }
 header h3{
-	color: #051864;
+	color: #263B93;
 }
 .area-title{
 	border-bottom: 3px solid #666 ;
-	color: #051864;
+	color: #263B93;
 	padding-bottom: 5px;
 	font-size: 24px;
 
 }
 .duties-list-item{
-	/*background-color: #e3e5f9;*/
-	background-image: url('http://www.psdgraphics.com/file/watercolor-paper-texture.jpg');
+	background-color: #FAFAFA;
+	
 	border-radius: 5px;
 	padding: 10px 5px 5px 0px;
 	box-shadow: 2px 2px 4px #555;
