--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@ a {
 	color: #000;
 }
 .skills-list{
-	background-image: url('http://previewcf.turbosquid.com/Preview/2014/08/01__22_20_40/274a_tile_Paper-Yellow-T2.jpg7a36bc3e-018e-40e0-8891-66e977d908daLarge.jpg');
-	border-radius: 5px;
+	background-color: #FAFAFA;
+	/*background-image: url('http://previewcf.turbosquid.com/Preview/2014/08/01__22_20_40/274a_tile_Paper-Yellow-T2.jpg7a36bc3e-018e-40e0-8891-66e977d908daLarge.jpg');
+	*/border-radius: 5px;
 	padding: 10px 5px 15px 25px;
 	box-shadow: 2px 2px 4px #555;
 	margin-bottom: 20px;
