--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
 	/*background-color: #ECECED;*/
 	/*background-image: url('http://previewcf.turbosquid.com/Preview/2014/08/01__22_20_40/274a_tile_Paper-Yellow-T2.jpg7a36bc3e-018e-40e0-8891-66e977d908daLarge.jpg');
 	*/
-	background-image: url('http://www.psdgraphics.com/file/watercolor-paper-texture.jpg');
+	background-image: url('main-back.jpg');
 }
 header{
 	text-align: center;
