--- a/style.css
+++ b/style.css
@@ -1,29 +1,41 @@
+@import url(https://fonts.googleapis.com/css?family=Fresca);
+@import url(https://fonts.googleapis.com/css?family=Candal);
+@import url(https://fonts.googleapis.com/css?family=Rhodium+Libre);
+@import url(https://fonts.googleapis.com/css?family=Rubik:700);
 
 body{
 	/*background-color: #ECECED;*/
 	/*background-image: url('http://previewcf.turbosquid.com/Preview/2014/08/01__22_20_40/274a_tile_Paper-Yellow-T2.jpg7a36bc3e-018e-40e0-8891-66e977d908daLarge.jpg');
-	*/
-	background-image: url('main-back.jpg');
+
+	
+	background-image: url('main-back.jpg');*/
+	background: radial-gradient( #c6b985, #665858);#B18E5C
+	font-family: 'Rhodium Libre', serif;
+}
+.icon{
+	color: #DDD;
 }
 header{
 	text-align: center;
 }
 header h3{
-	color: #263B93;
+	color: #DDD;
+/*	font-family: 'Rubik', sans-serif;*/
 }
 li{
 	line-height: 18px;
 }
 .area-title{
-	border-bottom: 3px solid #666 ;
-	color: #263B93;
+	
+	color: #DDD;
 	padding-bottom: 5px;
 	font-size: 24px;
-    text-shadow: 1px 1px 5px #bfbfbf;
+    text-shadow: 1px 1px 2px #000;
+    /*font-family: 'Rubik', sans-serif;*/
 }
 .duties-list-item{
 	background-color: #FAFAFA;
-	
+	background-image: url('main-back.jpg');
 	border-radius: 5px;
 	padding: 10px 5px 5px 0px;
 	box-shadow: 2px 2px 4px #555;
@@ -45,6 +57,8 @@ a {
 }
 .item-header{
 	margin-left: 25px;
+	border-bottom: 3px double #510e0e;
+	margin-right: 50px;
 }
 .title{
 	font-size: 18px;
@@ -57,5 +71,11 @@ a {
 .company{
 	font-size: 20px;
 	font-weight: bold;
-
+}
+#top-heading{
+	color: #ddd;
+	text-shadow: 1px 1px 2px #000;
+}
+#top-heading a{
+	color: #ddd;
 }
