adding final styles

--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
 @import url(https://fonts.googleapis.com/css?family=Fresca);
 @import url(https://fonts.googleapis.com/css?family=Candal);
 @import url(https://fonts.googleapis.com/css?family=Rhodium+Libre);
-@import url(https://fonts.googleapis.com/css?family=Rubik:700);
-
+@import url(https://fonts.googleapis.com/css?family=Rubik:400);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans);
 body{
 	/*background-color: #ECECED;*/
 	/*background-image: url('http://previewcf.turbosquid.com/Preview/2014/08/01__22_20_40/274a_tile_Paper-Yellow-T2.jpg7a36bc3e-018e-40e0-8891-66e977d908daLarge.jpg');
 
 	
 	background-image: url('main-back.jpg');*/
-	background: radial-gradient( #c6b985, #665858);#B18E5C
-	font-family: 'Rhodium Libre', serif;
+	 background: linear-gradient( #665858, #A2988A);
+	font-family: 'PT Sans', sans-serif;
+	font-size: 16px;
 }
 .icon{
 	color: #DDD;
 }
-header{
-	text-align: center;
-}
+
+
 header h3{
 	color: #DDD;
 /*	font-family: 'Rubik', sans-serif;*/
 }
 li{
-	line-height: 18px;
+	line-height: 20px;
 }
 .area-title{
 	
@@ -40,20 +40,35 @@ li{
 	padding: 10px 5px 5px 0px;
 	box-shadow: 2px 2px 4px #555;
 	margin-bottom: 20px;
-	
 }
 
 a {
 	color: #000;
 }
-.skills-list{
-	background-color: #FAFAFA;
-	/*background-image: url('http://previewcf.turbosquid.com/Preview/2014/08/01__22_20_40/274a_tile_Paper-Yellow-T2.jpg7a36bc3e-018e-40e0-8891-66e977d908daLarge.jpg');
-	*/border-radius: 5px;
-	padding: 10px 5px 15px 25px;
-	box-shadow: 2px 2px 4px #555;
-	margin-bottom: 20px;
+.skills-list {
+    background-color: #FAFAFA;
+    background-image: url('main-back.jpg');
+    border-radius: 5px;
+    padding: 20px 5px 15px 0px;
+    box-shadow: 2px 2px 4px #555;
+    margin-bottom: 20px;
+    height: 150px;
+    font-size: 18px;
+}
 
+footer {
+    background-color: #FAFAFA;
+    background-image: url('main-back.jpg');
+    border-radius: 5px;
+    padding: 20px 5px 15px 0px;
+    box-shadow: 2px 2px 4px #555;
+    margin-bottom: 20px;
+    font-size: 18px;
+}
+footer h5 {
+    margin-left: 25px;
+    font-weight: bold;
+    font-size: 18px;
 }
 .item-header{
 	margin-left: 25px;
@@ -75,7 +90,21 @@ a {
 #top-heading{
 	color: #ddd;
 	text-shadow: 1px 1px 2px #000;
+	text-align: center;
 }
 #top-heading a{
 	color: #ddd;
+}
+
+#column-1{
+	width: 200px;
+	float: left;
+}
+#column-2{
+	width: 200px;
+	float: left;
+}
+#column-3{
+	width: 400px;
+	float: left;
 }
